<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KTP</string>
    <string name="app_identifier">com.kappathetapi.app</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="login">login</string>
    <string name="change_password">change password</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section_profiles">Profiles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="members_title">Members</string>
    <string name="my_profile_title">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="phone">Phone</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_positive">Uh, cheah!</string>
    <string name="facebook_positive">Yeah!</string>
    <string name="cancel">Cancel</string>
    <string name="bio">Bio</string>
    <string name="hometown">Hometown</string>
    <string name="save_changes">Save</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="meetings">Meetings</string>
    <string name="pledging">Pledging</string>


    <string name="phone_button">P</string>
    <string name="email_button">E</string>
    <string name="twitter_button">T</string>
    <string name="facebook_button">F</string>
    <string name="linkedin_button">L</string>
    <!-- http://kappathetapi.com or http://localhost:3000 -->
    <string name="server_address">http://kappathetapi.com</string>
    <string name="server_token">5af9a24515589a73d0fa687e69cbaaa15918f833</string>

    <string name="title_activity_horizontal_slide">HorizontalSlideActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>
