<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="kappathetapi.ktp.fragments.EditProfileFragment"
    android:weightSum="1" android:orientation="vertical">

    <kappathetapi.ktp.classes.gifhelpers.ImageViewGIF
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="center"
        android:id="@+id/edit_profile_pic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hometown"
        android:textSize="18sp"
        android:id="@+id/edit_profile_hometown"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_profile_hometown_input"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="18sp"
        android:id="@+id/edit_profile_bio"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_profile_bio_input"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:id="@+id/edit_profile_phone"
        android:layout_row="3"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_profile_phone_input"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:id="@+id/edit_profile_email"
        android:layout_row="4"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_profile_email_input"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="18sp"
        android:id="@+id/edit_profile_facebook"
        android:layout_row="5"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_profile_facebook_input"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:textSize="18sp"
        android:id="@+id/edit_profile_twitter"
        android:layout_row="6"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_profile_twitter_input"
        android:layout_row="6"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:id="@+id/_edit_profile_save_button"
        android:layout_row="7"
        android:layout_column="0" />


</GridLayout>
