<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kappathetapi.ktp.fragments.ChangePasswordFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_username_edit_text"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_old_password_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/cp_username_edit_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_new_password_edit_text"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:layout_below="@+id/cp_old_password_edit_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_new_password_edit_text1"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:layout_below="@+id/cp_new_password_edit_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:id="@+id/cp_change_password_button"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="166dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Login"
        android:id="@+id/cp_back_to_login_button"
        android:layout_marginTop="48dp"
        android:layout_alignTop="@+id/cp_change_password_button"
        android:layout_alignLeft="@+id/cp_new_password_edit_text1"
        android:layout_alignStart="@+id/cp_new_password_edit_text1" />

</RelativeLayout>
