<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KTP"
        android:layout_centerHorizontal="true"
        android:textSize="120sp"
        android:layout_marginTop="80dp"
        android:id="@+id/textView" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/username_text"
        android:layout_marginBottom="185dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_text"
        android:hint="@string/password"
        android:layout_marginTop="70dp"
        android:layout_alignTop="@+id/username_text"
        android:layout_alignLeft="@+id/username_text"
        android:layout_alignStart="@+id/username_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:onClick="performLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:id="@+id/failed_login_text"
        android:layout_below="@+id/login_button"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignStart="@+id/password_text"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
